--- a/install/debian/changelog
+++ b/install/debian/changelog
@@ -1,3 +1,9 @@
+stew-gui-linux (0.1.0.84) precise; urgency=low
+
+  * Turn on 'busy cursor' when tasks are queued.
+
+ -- Neil Sheldon <neil@laurentia>  Fri, 02 Oct 2015 10:21:59 -0500
+
 stew-gui-linux (0.1.0.81) precise; urgency=low
 
   * Minor changes to about box
