--- a/install/debian/changelog
+++ b/install/debian/changelog
@@ -1,3 +1,10 @@
+stew-gui-linux (0.1.0.101) precise; urgency=low
+
+  * Some bug-fixes
+  * Added glyphs to various toolbars
+
+ -- Neil Sheldon <neilmsheldon@townsedgetechnology.com>  Wed, 27 Apr 2016 14:00:57 -0500
+
 stew-gui-linux (0.1.0.99) precise; urgency=low
 
   * Fixed a problem with refreshing documents occurring since the last release
