--- a/install/debian/changelog
+++ b/install/debian/changelog
@@ -1,3 +1,9 @@
+stew-gui-linux (0.1.0.102) precise; urgency=low
+
+  * Some bug-fixes from the bug-fixes 
+
+ -- Neil Sheldon <neilmsheldon@townsedgetechnology.com>  Fri, 29 Apr 2016 11:13:42 -0500
+
 stew-gui-linux (0.1.0.101) precise; urgency=low
 
   * Some bug-fixes
